ecmascript/parser/tests/test262-error-references/fail/45cb305cf7a07edd.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/45cb305cf7a07edd.js:1:13
  |
1 | ({ set prop() {} })
  |             ^

